// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders Magnificent Monkeys 1`] = `
<div>
  <button
    type="button"
  >
    Click me
  </button>
  <h1>
    Magnificent Monkeys
  </h1>
  ;
</div>
`;

exports[`App component renders magnificent monkeys 1`] = `
<div>
  <button
    type="button"
  >
    CLick me
  </button>
  <h1>
    Magnificent Monkeys
  </h1>
  ;
</div>
`;
